# berkalkulator-rust

./: Cargo.toml  README.md  en.po
i18n/en/LC_MESSAGES/: berkalkulator-rust.mo  berkalkulator-rust.pot  en.po
i18n/hu/LC_MESSAGES/: berkalkulator-rust.mo  hu.po
po/berkalkulator-rust/: berkalkulator-rust.pot
src/: main.rs
ui/: appwindow.slint
