[package]
name = "berkalkulator-rust"
version = "0.1.0"
authors = ["K3cs1 <kecskemetip@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that calculating Hungarian gross income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
slint-tr-extractor = "1.4.1"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "Berkalkulator"
identifier = "io.github.k3cs1.project.berkalkulator-rust"
