[package]
name = "berkalkulator-rust"
version = "0.1.0"
authors = ["K3cs1 <kecskemetip@gmail.com>"]
edition = "2024"
build = "build.rs"
description = "A desktop app that calculating Hungarian gross income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
env_logger = "0.11.6"
gettext = {version = "0.4.0", optional = false}
log = "=0.4.26"
serde = {version = "1.0.218", optional = false, features = ["derive"]}
slint = {version = "1.9.2", optional = false, features = ["gettext"]}
sys-locale = "0.3.2"

[build-dependencies]
slint-build = "1.9.2"

[package.metadata.bundle]
name = "Berkalkulator"
identifier = "io.github.k3cs1.project.berkalkulator-rust"


